--- a/batch/src/main/resources/application.yml
+++ b/batch/src/main/resources/application.yml
@@ -4,11 +4,11 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     # driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:mysql://localhost:3306/common_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=TRUE&rewriteBatchedStatements=true
+    url: jdbc:mysql://localhost:3306/common_db?serverTimezone=Asia/Seoul&characterEncoding=UTF-8&allowMultiQueries=TRUE&rewriteBatchedStatements=true&profileSQL=true&logger=Slf4JLogger&useInformationSchema=true
     username: root
     password: 1234
     hikari:
-      maximum-pool-size: 5
+      maximum-pool-size: 20
       max-lifetime: 1800000
       auto-commit: true
 
