--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -17,7 +17,7 @@ configurations {
 dependencies {
     implementation project(":domain")
     // redis
-//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 //    implementation 'org.redisson:redisson-spring-boot-starter:3.31.0'
 
     // queryDSL
